add_subdirectory(app)
add_subdirectory(aws)
add_subdirectory(binance)
add_subdirectory(core)
add_subdirectory(cli)
add_subdirectory(cpp)
add_subdirectory(di)
add_subdirectory(kvdb)
add_subdirectory(log)
add_subdirectory(network)
add_subdirectory(networkx)
add_subdirectory(ngrok)
add_subdirectory(restsdk)
add_subdirectory(service)
add_subdirectory(spdlog)
add_subdirectory(sqldb)
add_subdirectory(sqlite)